--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+altgraph==0.17.4
+macholib==1.16.3
 MouseInfo==0.1.3
 mss==9.0.1
+natsort==8.4.0
+packaging==23.2
 Pillow==10.1.0
 PyAutoGUI==0.9.54
 PyGetWindow==0.0.9
